Only use docker