@@ -1,23 +1,36 @@
-FROM maven:3-amazoncorretto-21-debian as build
-
-ADD . /usr/src/myapp
-COPY settings.xml /.m2/settings.xml
-ENV MAVEN_SETTINGS_PATH=/.m2/settings.xml
-
-
-RUN mvn -f /usr/src/myapp/pom.xml package -Dmaven.repo.local=/.m2/repository -s /.m2/settings.xml
-
-FROM alpine:latest AS runtime
-
-# Install java runtime as the produces image will be slightly smaller
-# than using an jdk base image.
-RUN apk --no-cache add openjdk21-jre-headless \
-	--repository=http://dl-cdn.alpinelinux.org/alpine/edge/testing
-
-# Copy the package
-COPY --from=build /usr/src/myapp/api/target/*-SNAPSHOT.jar \
-	/app/smartOrganizr.jar
+FROM node:latest
 
 WORKDIR /app
-ENTRYPOINT  ["java", "-jar","--add-opens","java.base/java.lang=ALL-UNNAMED","smartOrganizr.jar"]
-EXPOSE 8080
+RUN npm install -g pnpm@latest
+
+# Copy the package.json and install the dependencies
+COPY ./ui/package.json .
+COPY ./ui/pnpm-lock.yaml .
+RUN pnpm install
+
+# Copy the rest of the files
+COPY ./ui .
+
+# Build the app
+RUN pnpm run build
+
+
+FROM golang:alpine
+
+WORKDIR /app
+# Copy the binary from the build stage
+COPY ./api_go/go.mod ./api_go/go.sum ./
+RUN go mod download
+
+# Copy the rest of the files
+COPY ./api_go .
+
+# Copy frontend build
+COPY --from=0 /app/dist ./ui/dist
+
+RUN go build -o app .
+
+FROM scratch as runtime
+COPY --from=1 /app/app /app
+
+ENTRYPOINT ["/app"]
